examples/invalid/05_multiple_expression_statements.lane
module Examples.Invalid05
// invalid: a block has local items followed by exactly one final expression
pub fn bad(x : Int) -> Int {
  x + 1
  x + 2
}
